@@ -1,12 +1,4 @@
-Makefile
-Makefile.in
-aclocal.m4
-autom4te.cache/
-autoscan.log
-config/
-config.status
-config.log
-configure
 /.project
 /.pydevproject
 /.settings/
+build
