@@ -1,12 +1,0 @@
-AC_PREREQ([2.69])
-AC_INIT([zimsearch], [0.1], [https://github.com/dsboger/zimsearch])
-AC_CONFIG_AUX_DIR(config)
-
-AC_PROG_INSTALL
-
-AM_INIT_AUTOMAKE([1.15])
-AM_PATH_PYTHON([2.7]) 
-# pass PYTHON=<path to python 2> to configure, else it will end with python 3
-
-AC_CONFIG_FILES([Makefile])
-AC_OUTPUT
